[project]
name = "punta-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "smerlano", email = "smerlanooo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas<2.2",
    "duckdb",
    "yfinance",
    "python-dotenv",
    "great-expectations (>=1.4.4,<2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipykernel = "^6.29.5"

