[project]
name = "punta-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "smerlano", email = "smerlanooo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas<2.2",
    "duckdb",
    "yfinance",
    "python-dotenv",
    "great-expectations (>=1.4.4,<2.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "joblib (>=1.5.0,<2.0.0)",
    "shap (>=0.47.2,<0.48.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipykernel = "^6.29.5"

